test/extension_test_cases/valid/propagation/propagationarray.wacc
# structs

# Output:
# #empty#

# Exit:
# 0

# Program:

begin
  a := [0, 1] ;
  a =  [0 + 0, 6, 2, 3] ;
  b := a[0] ;
  c := a[1] ;
  d := a[1 + 1] + c;
  exit 0
end
