test/extension_test_cases/invalid/dynamic/dynamicarrays.wacc
# structs

# Output:
# #empty#

# Exit:
# 0

# Program:

begin
  a = 1 ;
  b = 2 ;
  c = [a, b] ;
  d = [0 , 1] ;
  println c[0] == 'a' ;
  println c[d['a']] ;
  println e[d['a']] ;
  e = [a, c] ;
  exit 0
end
